MEFA VERSIONS

Version 3.1-5 -- June 4, 2010

    * as.mefa.default now return call correctly
    * plot returns histogram if data is continuous
      and barplot if data is discrete

Version 3.1-4 -- November 10, 2009 (closed - r486)

    * .onUnload problem fixed (reported by B D Ripley)


Version 3.1-3 -- October 15, 2009 (closed - r484)

    * CRAN minor release.


Version 3.1-2 -- September 22, 2009 (closed - r478)

    * mefa got namespace.
    * reshape function in reshape is no longer
      available, citations now pointing to cast
      instead (in manual and vignette).


Version 3.1-1 -- July 10, 2009 (closed - r477)

    * dist2vec: deleted (use as.vector instead)
    * fill.na: accepts 1 dimensional vectors.
    * as.data.frame.dist: now returns labels of the
      dist object (dim.names=TRUE).
    * inflate: is now obsolete, rep.data.frame is
      used instead.


Version 3.1-0 -- June 14, 2009 (closed - r407)

    * CRAN major release.


Version 3.0-3 -- June 14, 2009 (closed - r406)

    * distance matrix manipulation tools added (is.dist,
      dist2vec, as.data.frame.dist)
    * report.mefa: dir argument became more transparent
      by using getwd().


Version 3.0-2 -- May 20, 2009 (closed - r381)

    * vec2dist: function to convert a vector to dist.
    * mfill, rdrop, cdrop: new functions to
      calculate matrix fill and drop rows/columns
      from matrices (similar to na.exclude).
    * documentation encoding problems fixed.
    * mat2list: new function converting a matrix
      into list (row or columnwise).


Version 3.0-1 -- May 1, 2009 (closed - r363)

    * citation info: updated in the Rd files.
    * class attribute of mefa objects: the 'list'
      element has been removed in order to leave
      as.mefa.default work properly.
    * as.mefa/as.stcs: redefined as method, together
      with 'default' class, and a bunch of coercion
      methods added (matrix, list, array, data.frame).


Version 3.0-0 -- March 7, 2009 (closed - r320)
